# MHSN-Project

./: README.md  advertisingDB.txt  helper.py  main.py  pyproject.toml  requirements.txt
CHECKLIST/: BRAINSTORM.txt  FIX.txt  PLAN.txt  TODO.txt
Headspace/: FIX.txt  PLAN.txt  TODO.txt
INFO/: README.md  pyproject.toml
static/css/: main.css
templates/: MHSN.html  justElements.html
