[tool.poetry]
name = "mhsn-project"
version = "0.1.0"
description = "A project for the unused monitors in and around the school to make them useful to students"
authors = ["Matthew Tujague", "Matthewtujague@gmail.com", "Tujaguem@middletownk12.org", "Flaccite@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
lxml = "^4.6.3"
beautifulsoup4 = "^4.9.3"
flask = "^2.0.1"
npm = "^0.1.1"
Flask-SocketIO = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
